--- a/config/settings.yml
+++ b/config/settings.yml
@@ -8,7 +8,7 @@ validate:
   email:
     length:
       max: 255
-    regex: !ruby/regexp/ '/\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i'
+    regex: !ruby/regexp/ '\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z'
   name:
     length:
       max: 50
